--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,16 @@
-body {
-  font-family: Arial, sans-serif;
-}
+/*body {*/
+/*  font-family: Arial, sans-serif;*/
+/*}*/
 
-.container {
-  max-width: 900px;
-}
+/*.container {*/
+/*  max-width: 900px;*/
+/*}*/
 
-h2, h3 {
-  color: #343a40;
-}
+/*h2, h3 {*/
+/*  color: #343a40;*/
+/*}*/
 
-/* Navbar Styling */
+/* Navbar Styling on employee department list pages*/
 .navbar {
   display: flex;
   align-items: center;
@@ -56,3 +56,4 @@ h2, h3 {
 .container {
   margin-top: 20px;
 }
+
